--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,17 @@ services:
       - pgadmin:/var/lib/pgadmin
     depends_on:
       - postgres
+  django:
+    build: ./projects
+    command: >
+      sh -c "python manage.py migrate && python manage.py create_default_users && python manage.py runserver 0.0.0.0:8000"
+    volumes:
+      - ./projects:/app
+    ports:
+      - "8000:8000"
+    depends_on:
+      - postgres
+    environment:
+      - DJANGO_SETTINGS_MODULE=app-root.settings
+      - DATABASE_URL=postgres://billing_db_admin:billing_db_admin_password@postgres:5432/billing_db
+      - POSTGRES_HOST=postgres
